--- a/src/app/clubs/clubs.component.css
+++ b/src/app/clubs/clubs.component.css
@@ -1,11 +1,12 @@
-/* body{margin:2em;}
+ body{margin:2em;}
 h2 {margin:1em 0;}
 
-/*
+
 .collapse-accordion a[data-toggle=collapse] {display: block;padding:.75rem 1.25rem;}
 
+
 .collapse-accordion .card a[data-toggle=collapse] {display: block;padding:.75rem 1.25rem;}
-.collapse-accordion .card-header {padding:0;} */
+.collapse-accordion .card-header {padding:0;} 
 
 html {
     font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
@@ -25,8 +26,7 @@ h3 {
 	margin-bottom: 0;
 }
 
-.user-card {
-	padding: 0;
+.card {
 	border: 1px solid lightGray;
 }
 
@@ -69,4 +69,12 @@ h3 {
 
 .list-group-item:hover {
 	background: lightGray;
+}
+
+.content-card {
+	padding: 5px;
+}
+
+.content-header {
+	padding: 20px;
 }
