--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -5,15 +5,7 @@
     		<p class="under-header-text">The fun outside the classroom</p>
 		</div>
 	</div>
-	<div class="row justify-content-center card">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	</div>
-  <div *ngFor="let club of clubs | mapToIterable">
+  <div class="row justify-content-center card" *ngFor="let club of clubs | mapToIterable">
     {{club.val.name}}
   </div>
 </div>
