--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,6 @@
-<!-- <div class="" *ngIf="!(authService.userSignedIn$ | async)">
-{{user.name}}
-</div> -->
 <button type="button" class="btn btn-primary" (click)="signIn()">Sign in</button>
 <button type="button" class="btn btn-primary" (click)="signOut()">Sign out</button>
-<div class="login-page">
+<div class="login-page" *ngIf="!(authService.userSignedIn$ | async)">
   <div class="form">
     <form class="register-form">
       <input type="text" placeholder="name"/>
@@ -13,10 +10,18 @@
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form>
     <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
-      <button>login</button>
+      <input type="text" placeholder="email" [(ngModel)]="loginObj.email" name="email"/>
+      <input type="password" placeholder="password" [(ngModel)]="loginObj.password" name="password"/>
+      <button (click)="signIn()">login</button>
       <p class="message">Not registered? <a href="#">Create an account</a></p>
     </form>
+  </div>
+
+  <div class="card" style="width: 20rem" *ngIf="(authService.userSignedIn$ | async)">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
   </div>
 </div>
