--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="card sticky">
   <div class="card-header py-2" style="background-color:white">
-    <b>Calendar</b>
+    <b>Upcoming Events</b>
   </div>
   <div *ngFor="let event of events; let i = index">
     <ul class="list-group list-group-flush" *ngIf="i < 3">
